@@ -705,17 +705,17 @@ sub pandora_audit ($$$$$) {
 #Create a new entry in tagente_modulo and the corresponding entry in
 #tagente_estado.
 ##########################################################################
-sub pandora_create_module ($$$$$$$) {
+sub pandora_create_module ($$$$$$$$) {
 	my ($agent_id, $module_type_id, $module_name, $max,
-	    $min, $description, $dbh) = @_;
+	    $min, $description, $interval, $dbh) = @_;
  
 	# Provide some default values	
 	$max = 0 if ($max eq '');
 	$min = 0 if ($min eq '');
 	$description = 'N/A' if ($description eq '');
 
-	my $module_id = db_insert($dbh, 'INSERT INTO tagente_modulo (`id_agente`, `id_tipo_modulo`, `nombre`, `max`, `min`, `descripcion`, `id_modulo`)
-	                        VALUES (?, ?, ?, ?, ?, ?, 1)', $agent_id, $module_type_id, $module_name, $max, $min, $description);
+	my $module_id = db_insert($dbh, 'INSERT INTO tagente_modulo (`id_agente`, `id_tipo_modulo`, `nombre`, `max`, `min`, `descripcion`, `module_interval`, `id_modulo`)
+	                        VALUES (?, ?, ?, ?, ?, ?, ?, 1)', $agent_id, $module_type_id, $module_name, $max, $min, $description, $interval);
 	db_do ($dbh, 'INSERT INTO tagente_estado (`id_agente_modulo`) VALUES (?)', $module_id);
 	return $module_id;
 }
