@@ -1,5 +1,15 @@
 2009-04-17  Ramon Novoa  <rnovoa@artica.es>
 
+	* lib/PandoraFMS/Core.pm, lib/PandoraFMS/DataServer.pm: Properly set
+	  module interval when auto-creating modules.
+
+	* lib/PandoraFMS/NetworkServer.pm: Disabled error messages from
+	  snmpget. The logs where flooded with timeout messages.
+
+	* util/pandora_db.pl: Updated to work with the new code.
+
+2009-04-17  Ramon Novoa  <rnovoa@artica.es>
+
 	* lib/PandoraFMS/PluginServer.pm, lib/PandoraFMS/PredictionServer.pm,
 	  lib/PandoraFMS/ReconServer.pm, lib/PandoraFMS/NetworkServer.pm,
 	  lib/PandoraFMS/WMIServer.pm: Fixed some references to database
